Font fam's not show on safari/ correcting small bugs

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,19 @@
 
 **********************************************
 */
-@import url('https://fonts.cdnfonts.com/css/edwardian-scr-alt-itc-tt');
+@font-face {
+    font-family: 'Edwardian Scr ITC TT';
+    src: url('./font/Edwardian\ Scr\ Alt\ ITC\ TT.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Ballet-Regular-VariableFont_opsz';
+    src: url('./font/Ballet-Regular-VariableFont_opsz.ttf') format('ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+
 
 
 * {
@@ -85,7 +97,7 @@ body {
 }
 
 h1 {
-    font-family: 'Edwardian Scr Alt ITC TT', sans-serif;
+    font-family: 'Edwardian Scr Alt ITC TT', 'Ballet-Regular-VariableFont_opsz',sans-serif;
     color: #be9837;
     font-size: 4rem;
 
