--- a/src/containers/site/Home/Home.css
+++ b/src/containers/site/Home/Home.css
@@ -1,16 +1,37 @@
-/*
+/*********************************************
 ********************COLORS********************
-
 #48330a Cafe noir
 #be9837 Satin sheen gold
 #f2f8f4 Mint Cream
 #353c46 Charcoal
 #4f6d7a Cadet
 #212529 Dark (same as bootstrap)
-
 **********************************************
-*/
+***********************************************/
+
+
+/***********************************************
+************************************************
+ FONT FAM's -> None works on safari / All works on Android
+ ***********************************************/
 @import url('https://fonts.cdnfonts.com/css/edwardian-scr-alt-itc-tt');
+@font-face {
+    font-family: 'Ballet';
+    src: url('../../../font/Ballet-Regular-VariableFont_opsz.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+@import url('https://fonts.googleapis.com/css2?family=Luxurious+Script&display=swap');
+@font-face {
+    font-family: 'balletregular';
+    src: url('../../../font/ballet-regular-variablefont_opsz-webfont.woff2') format('woff2'),
+        url('../../../font/ballet-regular-variablefont_opsz-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 
 #Home {
     background: #f2f8f4;
@@ -26,6 +47,11 @@
     height: 60vh;
     top: 0;
     z-index: 0;
+}
+.title-banner {
+    font-family:  'Edwardian Scr Alt ITC TT','Luxurious Script', 'Balletregular', sans-serif;
+    font-size: 6rem;
+    color: #be9837;
 }
 
 .img-banner {
@@ -48,12 +74,6 @@
     transform: translate(-50%);
     z-index: 100;
 
-}
-
-.title-banner {
-    font-family: 'Edwardian Scr Alt ITC TT', sans-serif;
-    font-size: 6rem;
-    color: #be9837;
 }
 
 .under-text-banner {
@@ -127,7 +147,7 @@
     }
 
     .title-banner {
-        font-family: 'Edwardian Scr Alt ITC TT', sans-serif;
+font-family:  'Edwardian Scr Alt ITC TT','Luxurious Script', 'Balletregular', sans-serif;
         font-size: 5rem;
         color: #be9837;
     }
